# aws-lambda-proxy-anthropic-messages-api

./: CLAUDE.md  README.md
bedrock-anthropic-proxy/: .env.example  .gitignore  README.md  index.js  pack-it.sh  package-lock.json  package.json  samconfig.toml.example  template.yaml  test-event.json
bedrock-anthropic-proxy-1/: README.md  package.json  template.yaml  tsconfig.json
bedrock-anthropic-proxy-1/src/: app.ts  handler.ts
bedrock-anthropic-proxy-2/: .env.example  .gitignore  README.md  package.json  tsconfig.json
bedrock-anthropic-proxy-2/src/: app.ts  server.ts
notebook/: messages.ipynb  pyproject.toml
